deploy/k8s/overlays/canonical-plus/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dd-shared-auth
spec:
  template:
    metadata:
      annotations:
        canonical.plus/auth-path: /shared-auth
    spec:
      containers:
        - name: shared-auth
